Update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 # Configuración de Base de Datos
-DB_HOST=localhost
+DB_URL=
+DB_HOST='localhost'
 DB_PORT=3306
-DB_USERNAME=
+DB_USER=
 DB_PASSWORD=
 DB_DATABASE=
 
 # Seguridad
 JWT_SECRET=
+
+# Configuracion APP
+PORT= 3000
